# scrubadub_spacy

./: .gitattributes  .pylintrc  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: unittests.yml
requirements/: python  python-dev
scrubadub_spacy/: __init__.py
scrubadub_spacy/detectors/: __init__.py  spacy.py  spacy_name_title.py
tests/: run.py  test_detector_spacy.py  test_detector_spacy_name_title.py
