[mypy]
ignore_missing_imports = True

[pycodestyle]
max-line-length = 120
statistics = True

[flake8]
max-line-length = 120
statistics = True
per-file-ignores =
    # imported but unused
    __init__.py: F401

[nosetests]
with-coverage=1
cover-package=scrubadub_spacy

[options.entry_points]
scrubadub_detectors =
    spacy = scrubadub_spacy.detectors:SpacyEntityDetector
    spacy_name = scrubadub_spacy.detectors:SpacyNameDetector
